--- a/my-app/package.json
+++ b/my-app/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "react-scripts": "1.1.4"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4",
+    "yarn": "^1.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
